--- a/app/index.html
+++ b/app/index.html
@@ -64,8 +64,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <paper-toolbar class="top-toolbar">
       <h1 class="flex"><a data-route="dashboard" href="/" on-click="onDataRouteClick">Polymer Admin</a></h1>
-      <paper-icon-button icon="search"></paper-icon-button>
       <paper-icon-button icon="refresh"></paper-icon-button>
+      <pa-search></pa-search>
     </paper-toolbar>
 
     <paper-drawer-panel id="paperDrawerPanel">
