--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -36,6 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-input/paper-input-error.html">
 <link rel="import" href="../bower_components/paper-input/paper-input-char-counter.html">
 <link rel="import" href="../bower_components/paper-input/paper-textarea.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-styles/color.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
@@ -43,6 +44,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/paper-ripple/paper-ripple.html">
 
+<!-- Gold elements -->
+<link rel="import" href="../bower_components/gold-email-input/gold-email-input.html">
+<link rel="import" href="../bower_components/gold-phone-input/gold-phone-input.html">
 <!-- Google Web Components -->
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
 <link rel="import" href="../bower_components/google-map/google-map.html">
@@ -67,8 +71,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 
-<link rel="import" href="pa-table.html">
-<link rel="import" href="pa-todo.html">
+<link rel="import" href="components/pa-table.html">
+<link rel="import" href="components/pa-todo.html">
+<link rel="import" href="components/pa-profile-picture.html">
+<link rel="import" href="components/pa-search.html">
+
+<link rel="import" href="components/pa-simple-grid.html">
 
 <link rel="import" href="widgets/pa-leaflet.html">
 <link rel="import" href="widgets/pa-buttons.html">
