--- a/app/elements/pages/pa-form-elements.html
+++ b/app/elements/pages/pa-form-elements.html
@@ -9,28 +9,37 @@
       <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
     </div>
 
-    <div class="page-content page-content-2">
-      <paper-material elevation="1">
-        <h3>Text Input</h3>
-        <pa-text-inputs></pa-text-inputs>
-      </paper-material>
+    <pa-simple-grid sm-cols="1" md-cols="2">
 
-      <paper-material elevation="1">
-        <h3>Validation</h3>
-        <pa-inputs-validation></pa-inputs-validation>
-      </paper-material>
+      <div>
+        <paper-material class="widget" elevation="1">
+          <h3>Text Input</h3>
+          <pa-text-inputs></pa-text-inputs>
+        </paper-material>
+      </div>
 
-      <paper-material elevation="1">
-        <h3>Checkbox</h3>
-        <pa-checkboxes></pa-checkboxes>
-      </paper-material>
+      <div>
+        <paper-material class="widget" elevation="1">
+          <h3>Validation</h3>
+          <pa-inputs-validation></pa-inputs-validation>
+        </paper-material>
+      </div>
 
-      <paper-material elevation="1">
-        <h3>Radio</h3>
-        <pa-radio-buttons></pa-radio-buttons>
-      </paper-material>
+      <div>
+        <paper-material class="widget" elevation="1">
+          <h3>Checkbox</h3>
+          <pa-checkboxes></pa-checkboxes>
+        </paper-material>
+      </div>
 
-    </div>
+      <div>
+        <paper-material class="widget" elevation="1">
+          <h3>Radio</h3>
+          <pa-radio-buttons></pa-radio-buttons>
+        </paper-material>
+      </div>
+
+    </pa-simple-grid>
   </template>
 
   <script>
