--- a/app/elements/pages/pa-maps.html
+++ b/app/elements/pages/pa-maps.html
@@ -14,21 +14,28 @@
       <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
     </div>
 
-    <div class="page-content">
-      <paper-material elevation="1">
-        <h3>Google Maps</h3>
-        <google-map latitude="37.77493" longitude="-122.41942" fit-to-markers>
-          <google-map-marker latitude="37.779" longitude="-122.3892"
-                             draggable="true" title="Go Giants!"></google-map-marker>
-          <google-map-marker latitude="37.777" longitude="-122.38911"></google-map-marker>
-        </google-map>
-      </paper-material>
+    <pa-simple-grid>
 
-      <paper-material elevation="1">
-        <h3>Leaflet Map</h3>
-        <pa-leaflet></pa-leaflet>
-      </paper-material>
-    </div>
+      <div>
+        <paper-material class="widget" elevation="1">
+          <h3>Google Maps</h3>
+          <google-map latitude="37.77493" longitude="-122.41942" fit-to-markers>
+            <google-map-marker latitude="37.779" longitude="-122.3892"
+                               draggable="true" title="Go Giants!"></google-map-marker>
+            <google-map-marker latitude="37.777" longitude="-122.38911"></google-map-marker>
+          </google-map>
+        </paper-material>
+      </div>
+
+      <div>
+        <paper-material class="widget" elevation="1">
+          <h3>Leaflet Map</h3>
+          <pa-leaflet></pa-leaflet>
+        </paper-material>
+      </div>
+
+    </pa-simple-grid>
+
   </template>
 
   <script>
