feat(todo, pages): add todo component, move widget title to separate component, add widget layout buttons, fix leaflet script

--- a/app/elements/pages/pa-charts.html
+++ b/app/elements/pages/pa-charts.html
@@ -1,13 +1,11 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../../bower_components/google-chart/google-chart.html">
 
 <dom-module id="pa-charts">
   <template>
     <style include="shared-styles"></style>
 
-    <div class="widget-title">
-      <h2>Charts</h2>
-      <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-    </div>
+    <pa-widget-title title="Charts"></pa-widget-title>
 
     <pa-simple-grid sm-cols="1" md-cols="2">
 
