--- a/app/elements/pages/pa-form-elements.html
+++ b/app/elements/pages/pa-form-elements.html
@@ -1,13 +1,18 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 
+<link rel="import" href="../../../bower_components/gold-email-input/gold-email-input.html">
+<link rel="import" href="../../../bower_components/gold-phone-input/gold-phone-input.html">
+
+<link rel="import" href="../widgets/pa-checkboxes.html">
+<link rel="import" href="../widgets/pa-radio-buttons.html">
+<link rel="import" href="../widgets/pa-text-inputs.html">
+<link rel="import" href="../widgets/pa-inputs-validation.html">
+
 <dom-module id="pa-form-elements">
   <template>
     <style include="shared-styles"></style>
 
-    <div class="widget-title">
-      <h2>Form Elements</h2>
-      <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-    </div>
+    <pa-widget-title title="Form Elements"></pa-widget-title>
 
     <pa-simple-grid sm-cols="1" md-cols="2">
 
