--- a/app/elements/pages/pa-maps.html
+++ b/app/elements/pages/pa-maps.html
@@ -1,4 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../../bower_components/google-map/google-map.html">
+<link rel="import" href="../../../bower_components/google-map/google-map-marker.html">
+<link rel="import" href="../widgets/pa-leaflet.html">
 
 <dom-module id="pa-maps">
   <template>
@@ -9,10 +12,7 @@
       }
     </style>
 
-    <div class="widget-title">
-      <h2>Maps</h2>
-      <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-    </div>
+    <pa-widget-title title="Maps"></pa-widget-title>
 
     <pa-simple-grid>
 
