--- a/app/elements/widgets/pa-buttons.html
+++ b/app/elements/widgets/pa-buttons.html
@@ -72,16 +72,7 @@
       }
     </style>
 
-    <pa-simple-grid xs-cols="2" sm-cols="4">
-      <div>
-        <paper-button tabindex="0">button</paper-button>
-        <paper-button tabindex="0" class="colorful">colorful</paper-button>
-        <paper-button tabindex="0" disabled>disabled</paper-button>
-        <paper-button tabindex="0" noink>noink</paper-button>
-        <paper-button tabindex="0" class="colorful custom"><iron-icon icon="check"></iron-icon>ok</paper-button>
-        <paper-button tabindex="0" class="custom"><iron-icon icon="clear"></iron-icon>cancel</paper-button>
-      </div>
-
+    <pa-simple-grid xs-cols="3">
       <div>
         <paper-button tabindex="0" raised>button</paper-button>
         <paper-button tabindex="0" raised class="colorful">colorful</paper-button>
