--- a/app/elements/widgets/pa-leaflet.html
+++ b/app/elements/widgets/pa-leaflet.html
@@ -18,24 +18,30 @@
       'use strict';
 
       Polymer({
-        is: 'pa-leaflet'
+        is: 'pa-leaflet',
+
+        attached: function() {
+          this.async(function(){
+            this.loadLeaflet();
+          },1);
+        },
+
+        loadLeaflet: function() {
+            var map = L.map('leaflet-map').setView([51.505, -0.09], 13);
+
+            L.Icon.Default.imagePath = '../../../bower_components/leaflet/dist/images';
+
+            L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+              attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+            }).addTo(map);
+
+            L.marker([51.5, -0.09]).addTo(map)
+                .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
+                .openPopup();
+        }
       });
-
-      setTimeout(function(){
-        var map = L.map('leaflet-map').setView([51.505, -0.09], 13);
-
-        L.Icon.Default.imagePath = '../../../bower_components/leaflet/dist/images';
-
-        L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-          attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
-
-        L.marker([51.5, -0.09]).addTo(map)
-            .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
-            .openPopup();
-      }, 100);
-
     })();
+
   </script>
 
 </dom-module>
