feat(menu): expand/collapse menu

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <paper-scroll-header-panel fixed>
 
     <paper-toolbar class="top-toolbar">
-      <h1 class="flex"><a data-route="dashboard" href="/" on-click="onDataRouteClick">Polymer Admin</a></h1>
+      <h1><a data-route="dashboard" href="/" on-click="onDataRouteClick">Polymer Admin</a></h1>
+      <paper-icon-button icon="menu" class="toggle-drawer" on-click="toggleDrawer"></paper-icon-button>
+      <span class="flex"></span>
       <paper-icon-button icon="refresh"></paper-icon-button>
       <pa-search></pa-search>
     </paper-toolbar>
