--- a/app/elements/pages/pa-form-elements.html
+++ b/app/elements/pages/pa-form-elements.html
@@ -12,9 +12,7 @@
   <template>
     <style include="shared-styles"></style>
 
-    <pa-widget-title title="Form Elements"></pa-widget-title>
-
-    <pa-simple-grid sm-cols="1" md-cols="2">
+    <pa-simple-grid sm-cols="1" md-cols$='{{cols}}'>
 
       <div>
         <paper-material class="widget" elevation="1">
@@ -52,7 +50,14 @@
       'use strict';
 
       Polymer({
-        is: 'pa-form-elements'
+        is: 'pa-form-elements',
+
+        properties: {
+          cols: {
+            type: String,
+            value: '2'
+          }
+        }
       });
     })();
   </script>
