--- a/app/elements/pages/pa-ui-elements.html
+++ b/app/elements/pages/pa-ui-elements.html
@@ -14,9 +14,7 @@
       }
     </style>
 
-    <pa-widget-title title="UI Elements"></pa-widget-title>
-
-    <pa-simple-grid sm-cols="1" md-cols="2">
+    <pa-simple-grid sm-cols="1" md-cols$='{{cols}}'>
 
       <div>
         <paper-material class="widget" elevation="1">
@@ -55,7 +53,14 @@
       'use strict';
 
       Polymer({
-        is: 'pa-ui-elements'
+        is: 'pa-ui-elements',
+
+        properties: {
+          cols: {
+            type: String,
+            value: '2'
+          }
+        }
       });
     })();
   </script>
