--- a/app/elements/pages/pa-user-profile.html
+++ b/app/elements/pages/pa-user-profile.html
@@ -29,8 +29,6 @@
 
     </style>
 
-    <pa-widget-title title="User Profile"></pa-widget-title>
-
     <pa-simple-grid>
       <div>
         <paper-material class="widget" elevation="1">
@@ -109,7 +107,14 @@
 
       Polymer({
         is: 'pa-user-profile',
-        });
+
+        properties: {
+          cols: {
+            type: String,
+            value: '2'
+          }
+        }
+      });
     })();
   </script>
 
