fix(styles): minor styles fixes

--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <h1><a data-route="dashboard" href="/" on-click="onDataRouteClick">Polymer Admin</a></h1>
       <paper-icon-button icon="menu" class="toggle-drawer" on-click="toggleDrawer"></paper-icon-button>
       <span class="flex"></span>
-      <paper-icon-button icon="refresh"></paper-icon-button>
+      <paper-icon-button icon="refresh" class="refresh-icon"></paper-icon-button>
       <pa-search></pa-search>
     </paper-toolbar>
 
