--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -95,6 +95,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     white-space: nowrap;
   }
 
+  .refresh-icon {
+    margin-right: 8px;
+  }
+
   @media (min-width: 640px) {
     .collapsed-menu::shadow #main {
       left: 62px !important;
